@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: makebearoff.c,v 1.30 2004/01/04 00:53:54 uid67713 Exp $
+ * $Id: makebearoff.c,v 1.31 2004/09/29 13:13:13 oysteijo Exp $
  */
 
 #include "config.h"
@@ -1442,7 +1442,7 @@ generate_ts ( const int nTSP, const int nTSC,
 
 static void
 usage ( char *arg0 ) {
-
+#ifndef WIN32
   printf ( "Usage: %s [options] -f filename\n"
            "Options:\n"
            "  -f, --outfile filename\n"
@@ -1469,14 +1469,42 @@ usage ( char *arg0 ) {
            "%s -o 6 -f gnubg_os0.bd\n"
            "\n",
            arg0, arg0 );
-
+#else
+    MessageBox (NULL, 
+           "Usage: makebearoff [options] -f filename\n\n"
+           "Options:\n"
+           "  -f, --outfile filename\tOutput to file\n"
+           "  -t, --two-sided PxC   \tNumber of points and number of chequers"
+           " for two-sided database\n"
+           "  -o, --one-sided P     \tNumber of points for one-sided database\n"
+           "  -s, --xhash-size N    \tUse cache of size N bytes\n"
+           "  -O, --old-bearoff filename\tReuse already generated bearoff database\n"
+           "  -H, --no-header       \tDo not write header\n"
+           "  -C, --no-cubeful      \tDo not calculate cubeful equities for"
+           " two-sided databases\n"
+           "  -c, --no-compress     \tDo not use compression scheme "
+                                  "for one-sided databases\n"
+           "  -g, --no-gammons      \tInclude gammon distribution for one-sided"
+                                  " databases\n"
+           "  -n, --normal-dist     \tApproximate one-sided bearoff database"
+           " with normal distributions\n"
+           "  -v, --version         \t\tShow version information and exit\n"
+           "  -h, --help            \t\tDisplay usage and exit\n"
+           "\n"
+           "To generate gnubg_os0.bd:\n"
+           "makebearoff -o 6 -f gnubg_os0.bd\n"
+           "\n",
+		     "Makebearoff", MB_OK);
+#endif
 }
 
 static void
 version ( void ) {
-
-  printf ( "makebearoff $Revision: 1.30 $\n" );
-
+#ifndef WIN32
+  printf ( "makebearoff $Revision: 1.31 $\n" );
+#else
+  MessageBox( NULL, "makebearoff $Revision: 1.31 $\n" );
+#endif
 }
 
 
@@ -1619,7 +1647,7 @@ extern int main( int argc, char **argv ) {
     dlgprintf( 123, "%d", nHashSize);
     dlgprintf( 124, "%s", szOldBearoff ? "yes" : "no");
     dlgprintf(130, "Generating one-sided bearoff database. Please wait." );
-    dlgprintf(131, "makebearoff $Revision: 1.30 $" );
+    dlgprintf(131, "makebearoff $Revision: 1.31 $" );
 #else
     fprintf ( stderr, 
               _("One-sided database:\n"
@@ -1747,7 +1775,7 @@ extern int main( int argc, char **argv ) {
     dlgprintf(125, "" );
     dlgprintf(126, "" );
     dlgprintf(130, "Generating two-sided bearoff database. Please wait." );
-    dlgprintf(131, "makebearoff $Revision: 1.30 $" );
+    dlgprintf(131, "makebearoff $Revision: 1.31 $" );
 #else 
     fprintf ( stderr,
               _("Two-sided database:\n"
